<resources>
    <string name="app_name">GBWeatherApp</string>
    <string name="enter_city">Выберите город</string>
    <string name="nav_header_title">Войдите в систему</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="write_letter">Оставить отзыв</string>
    <string name="about_app">Справка</string>
    <string name="settings">настройки</string>
    <string name="sign_in">Войти</string>
    <string name="invalid_username">Неверное имя</string>
    <string name="invalid_password">Пароль введен неверно</string>
    <string name="login_failed">"Введены невыерные данные. Попробуйте еще раз."</string>
    <string name="enter_subject">Укажите тему письма</string>
    <string name="write">Напишите письмо</string>
    <string name="send">Отправить</string>
    <string name="prompt_name">Введите имя</string>
    <string name="hint_name">минимум 2 символа, строчные латинские</string>
    <string name="hint_password">минимум 6 символов, строчные буквы, цифра</string>
    <string name="prompt_password">Введите пароль</string>
    <string name="interface_error">Не имплементирован интерфейс %s</string>
    <string name="Welcome">Добро пожаловать, %s</string>
    <string name="window_speed">Ветер</string>
    <string name="air_pressure">Давление</string>
    <string name="addingToFavourite">Добавить в избранное</string>
    <string name="image">изображение погоды</string>
    <string name="data">Дата</string>
    <string name="city">Город</string>
    <string name="snackbar_message_add">"Город добавлен в избранное: %s"</string>
    <string name="snackbar_message_delete">Город удален из избранного: %s</string>
    <string name="show_button">Поиск</string>
    <string name="addToFavourites">Избранное</string>
    <string name="button_ok">OK</string>
    <string name="error">Ошибка</string>
    <string name="city_error">Произошла ошибка. Вы будете перенаправлены на главную страницу.</string>
    <string name="on">Подключено</string>
    <string name="off">Отключено</string>
    <string name="storm_warning">Предупреждение о шторме</string>
    <string name="theme">Тема</string>
    <string name="dark">Темная</string>
    <string name="light">Светлая</string>
    <string name="location">Определять местоположение</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="title_activity_weather_maps">Map</string>
    <string name="enter_coordinates">Введите координаты</string>
    <string name="your_location">Ваше местоположение</string>
    <string name="adjust_location_settings">Исправьте настройки геолокации на Вашем устройстве</string>
    <string name="latidude">Долгота</string>
    <string name="longitude">Широта</string>
    <string name="know_weather">Узнать погоду</string>
    <string name="my_location">Моя локация</string>
    <string name="go_to_map">Перейти в режим карты</string>
    <string name="moisture">Влажность</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_all_favourites">удалить все избранное</string>
    <string name="favourite_cities">Избранные города</string>
    <string name="map">карта</string>
    <string name="empty_favourites">В избранном пусто</string>

    <string name="unknown_action">Не распознано</string>
    <string name="power_connected">идет заряд</string>
    <string name="power_disconnected">заряд отключен</string>
    <string name="purchase">Покупка</string>
    <string name="purchase_request">Необходимо купить версию pro. Согласны?</string>
    <string name="deny">Не хочу</string>
</resources>