<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/common_margin"
    android:background="@color/orange_light"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_marginTop="@dimen/margin_small"
        android:id="@+id/lat"
        android:padding="@dimen/margin_small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/latidude"/>

    <EditText
        android:layout_marginTop="@dimen/margin_small"
        android:id="@+id/edit_text_lat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lat"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginTop="@dimen/margin_small"
        android:id="@+id/lon"
        android:padding="@dimen/margin_small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lat"
        android:text="@string/longitude"/>

    <EditText
        android:layout_marginTop="@dimen/margin_small"
        android:id="@+id/edit_text_lon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/lon"
        app:layout_constraintTop_toBottomOf="@id/lat" />

    <Button
        android:layout_marginTop="@dimen/common_margin"
        android:id="@+id/check_weather_button"
        android:padding="@dimen/common_margin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/know_weather"
        app:layout_constraintTop_toBottomOf="@id/lon"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:layout_marginTop="@dimen/common_margin"
        android:id="@+id/find_me_button"
        android:padding="@dimen/common_margin"
        android:layout_width="0dp"
        android:layout_margin="@dimen/margin_small"
        android:layout_height="wrap_content"
        android:text="@string/my_location"
        app:layout_constraintTop_toBottomOf="@id/lon"
        app:layout_constraintStart_toEndOf="@id/check_weather_button"/>


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="415dp"
        android:layout_height="694dp"
        app:layout_constraintTop_toBottomOf="@id/check_weather_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        tools:context=".WeatherMapsActivity" />

</androidx.constraintlayout.widget.ConstraintLayout>