<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="5dp"
            android:layout_margin="@dimen/common_margin"
            android:background="@drawable/krug_ugly">

            <TextView
                android:id="@+id/textViewCity"
                style="@style/my_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textSize="@dimen/text_size_average"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewData"
                style="@style/my_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewCity" />

            <ImageView
                android:id="@+id/imageViewWeatherIcon"
                android:layout_width="@dimen/weather_icon_size"
                android:layout_height="@dimen/weather_icon_size"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewData" />

            <LinearLayout
                android:id="@+id/liner_ring"
                android:layout_width="@dimen/ring_size"
                android:layout_height="@dimen/ring_size"
                android:background="@drawable/ring"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/margin_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageViewWeatherIcon">

                <TextView
                    android:id="@+id/textViewTemperature"
                    style="@style/my_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:textSize="@dimen/text_size_big"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />

                <TextView
                    android:id="@+id/textViewDescription"
                    style="@style/my_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewTemperature" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_margin="@dimen/common_margin"
            android:background="@drawable/krug_ugly"
            android:id="@+id/recycleView_for_week_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:elevation="5dp"
            android:background="@drawable/krug_ugly">
            <TableRow>
                <TextView
                    android:layout_weight="0.5"
                    android:gravity="center"
                    style="@style/my_text"
                    android:padding="@dimen/common_margin"
                    android:text="@string/window_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textViewWindSpeedValue"
                    android:layout_weight="1"
                    android:padding="@dimen/common_margin"
                    android:gravity="center"
                    style="@style/my_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"  />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_weight="0.5"
                    android:text="@string/air_pressure"
                    android:padding="@dimen/common_margin"
                    android:gravity="center"
                    style="@style/my_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textViewPressureValue"
                    android:layout_weight="1"
                    android:gravity="center"
                    style="@style/my_text"
                    android:padding="@dimen/common_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_weight="0.5"
                    android:padding="@dimen/common_margin"
                    android:text="@string/moisture"
                    android:gravity="center"
                    style="@style/my_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textViewHumidityValue"
                    android:layout_weight="1"
                    android:gravity="center"
                    style="@style/my_text"
                    android:padding="@dimen/common_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

