<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <LinearLayout
        android:id="@+id/liner_activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">
        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <FrameLayout
        android:id="@+id/frame_for_extra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_enter_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:background="@drawable/krug_ugly"
            android:hint="@string/enter_city"
            android:orientation="vertical"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/button_show"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/textInput_enter_city"
                style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/alice"
                android:inputType="textAutoComplete"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rippleColor="@color/orange_dark"
                android:padding="@dimen/margin_small"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_small"
                android:fontFamily="@font/alice"
                android:layout_marginBottom="@dimen/common_margin"
                app:cornerRadius="@dimen/common_margin"
                android:text="@string/show_button">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_map"
                android:padding="@dimen/margin_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rippleColor="@color/orange_dark"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_small"
                android:fontFamily="@font/alice"
                android:layout_marginBottom="@dimen/common_margin"
                app:cornerRadius="@dimen/common_margin"
                android:text="Перейти в карты">

            </com.google.android.material.button.MaterialButton>

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/frame_for_favourites"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/common_margin"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/krug_ugly">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addToFavourites"
                style="@style/my_text"
                android:textSize="@dimen/text_size_small"
                android:textAlignment="center"/>

                <ImageView
                    android:id="@+id/image_delete_all"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_delete_24"
                    android:background="@drawable/circle"
                    />



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleView_for_favourites_city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>